# ceph

doc/changelog/: v0.80.5.txt
src/: ceph.in
src/erasure-code/isa/: ErasureCodeIsa.cc  Makefile.am  README  xor_op.cc
src/rgw/: rgw_common.h  rgw_op.cc
src/test/: ceph_filestore_dump.py
